src/test/ui/error-codes/E0492.stderr
error[E0492]: this borrow to an interior mutable value may end up in the final value of this constant
  --> $DIR/E0492.rs:4:33
   |
LL | const B: &'static AtomicUsize = &A;
   |                                 ^^

error[E0492]: this borrow to an interior mutable value may end up in the final value of this static
  --> $DIR/E0492.rs:5:34
   |
LL | static C: &'static AtomicUsize = &A;
   |                                  ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0492`.
